Add supabase login, add film and get added films + database types, Film detail component & fetch

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "rebuild-db": "bunx supabase gen types --lang=typescript --project-id \"xhifbxvkghdfimmdvqjf\" --schema public > database.types.ts"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.61.0",
     "@tanstack/react-query-devtools": "^5.61.0",
     "@tanstack/react-router": "^1.82.2",
@@ -20,6 +22,7 @@
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "supabase": ">=1.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
