--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "rebuild-db": "bunx supabase gen types --lang=typescript --project-id \"xhifbxvkghdfimmdvqjf\" --schema public > database.types.ts"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
